--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="img/logo2.png" alt="Rolex Logo" class="center-logo" width="100px">
+          <img src="/logo2.png" alt="Rolex Logo" class="center-logo" width="100px">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon bg-light"></span>
@@ -64,7 +64,7 @@
         <!-- Collection 1: Submariner -->
         <div class="col-md-4">
           <div class="card mb-4">
-            <img src="img/r5.png" class="card-img-top" alt="Rolex Submariner">
+            <img src="/r5.png" class="card-img-top" alt="Rolex Submariner">
             <div class="card-body">
               <h4 class="card-title text-center text-dark">Submariner</h4>
               <p class="card-text text-center text-dark">The iconic dive watch, known for its timeless design and exceptional performance.</p>
@@ -75,7 +75,7 @@
         <!-- Collection 2: Datejust -->
         <div class="col-md-4">
           <div class="card mb-4">
-            <img src="img/r6.png" class="card-img-top" alt="Rolex Datejust">
+            <img src="/r6.png" class="card-img-top" alt="Rolex Datejust">
             <div class="card-body">
               <h4 class="card-title text-center text-dark">Datejust</h4>
               <p class="card-text text-center text-dark">A classic symbol of style and prestige, featuring the iconic date window.</p>
@@ -86,7 +86,7 @@
         <!-- Collection 3: Daytona -->
         <div class="col-md-4">
           <div class="card mb-4">
-            <img src="img/r7.png" class="card-img-top" alt="Rolex Daytona">
+            <img src="/r7.png" class="card-img-top" alt="Rolex Daytona">
             <div class="card-body">
               <h4 class="card-title text-center text-dark">Daytona</h4>
               <p class="card-text text-center text-dark">The ultimate racing chronograph, designed for speed and precision.</p>
@@ -107,52 +107,52 @@
           <div id="watch-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/r1.png" class="d-block w-100" alt="Rolex Watch 1">
+                <img src="/r1.png" class="d-block w-100" alt="Rolex Watch 1">
               </div>
               <div class="carousel-item">
-                <img src="img/r5.png" class="d-block w-100" alt="Rolex Watch 2">
+                <img src="/r5.png" class="d-block w-100" alt="Rolex Watch 2">
               </div>
               <div class="carousel-item">
-                <img src="img/r6.png" class="d-block w-100" alt="Rolex Watch 3">
+                <img src="/r6.png" class="d-block w-100" alt="Rolex Watch 3">
               </div>
               <div class="carousel-item">
-                <img src="img/r7.png" class="d-block w-100" alt="Rolex Watch 4">
+                <img src="/r7.png" class="d-block w-100" alt="Rolex Watch 4">
               </div>
               <div class="carousel-item">
-                <img src="img/r8.png" class="d-block w-100" alt="Rolex Watch 5">
+                <img src="/r8.png" class="d-block w-100" alt="Rolex Watch 5">
               </div>
               <div class="carousel-item">
-                <img src="img/r9.png" class="d-block w-100" alt="Rolex Watch 6">
+                <img src="/r9.png" class="d-block w-100" alt="Rolex Watch 6">
               </div>
               <div class="carousel-item">
-                <img src="img/r10.png" class="d-block w-100" alt="Rolex Watch 7">
+                <img src="/r10.png" class="d-block w-100" alt="Rolex Watch 7">
               </div>
               <div class="carousel-item">
-                <img src="img/r11.png" class="d-block w-100" alt="Rolex Watch 8">
+                <img src="/r11.png" class="d-block w-100" alt="Rolex Watch 8">
               </div>
               <div class="carousel-item">
                 <img src="img/r12.png" class="d-block w-100" alt="Rolex Watch 9">
               </div>
               <div class="carousel-item">
-                <img src="img/r13.png" class="d-block w-100" alt="Rolex Watch 10">
+                <img src="/r13.png" class="d-block w-100" alt="Rolex Watch 10">
               </div>
               <div class="carousel-item">
-                <img src="img/r14.png" class="d-block w-100" alt="Rolex Watch 11">
+                <img src="/r14.png" class="d-block w-100" alt="Rolex Watch 11">
               </div>
               <div class="carousel-item">
-                <img src="img/r15.png" class="d-block w-100" alt="Rolex Watch 12">
+                <img src="/r15.png" class="d-block w-100" alt="Rolex Watch 12">
               </div>
               <div class="carousel-item">
-                <img src="img/r16.png" class="d-block w-100" alt="Rolex Watch 13">
+                <img src="/r16.png" class="d-block w-100" alt="Rolex Watch 13">
               </div>
               <div class="carousel-item">
-                <img src="img/r17.png" class="d-block w-100" alt="Rolex Watch 14">
+                <img src="/r17.png" class="d-block w-100" alt="Rolex Watch 14">
               </div>
               <div class="carousel-item">
-                <img src="img/r18.png" class="d-block w-100" alt="Rolex Watch 15">
+                <img src="/r18.png" class="d-block w-100" alt="Rolex Watch 15">
               </div>
               <div class="carousel-item">
-                <img src="img/r19.png" class="d-block w-100" alt="Rolex Watch 16">
+                <img src="/r19.png" class="d-block w-100" alt="Rolex Watch 16">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#watch-carousel" data-bs-slide="prev">
@@ -185,7 +185,7 @@
         <!-- Add animation to product showcase -->
         <div class="col-md-4">
           <div class="card image-card">
-            <img src="img/r11.png" class="card-img-top" alt="Rolex Watch 1">
+            <img src="/r11.png" class="card-img-top" alt="Rolex Watch 1">
             <div class="card-body">
               <h5 class="card-title text-dark text-center">Rolex Watch 1</h5>
               <p class="card-text text-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet sapien nec nunc tincidunt consequat.</p>
@@ -195,7 +195,7 @@
         </div>
         <div class="col-md-4">
           <div class="card  image-card">
-            <img src="img/r12.png" class="card-img-top" alt="Rolex Watch 2">
+            <img src="/r12.png" class="card-img-top" alt="Rolex Watch 2">
             <div class="card-body">
               <h5 class="card-title text-dark text-center">Rolex Watch 2</h5>
               <p class="card-text text-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet sapien nec nunc tincidunt consequat.</p>
