--- a/index.html
+++ b/index.html
@@ -203,6 +203,16 @@
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="card  image-card">
+            <img src="r20.png" class="card-img-top" alt="Rolex Watch 2">
+            <div class="card-body">
+              <h5 class="card-title text-dark text-center">Rolex Watch 3</h5>
+              <p class="card-text text-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet sapien nec nunc tincidunt consequat.</p>
+              <a href="#" class="btn btn-primary">View Details</a>
+            </div>
+          </div>
+        </div>
         <!-- Add more product cards here -->
       </div>
     </div>
