--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item pe-2">
-              <a class="nav-link text-light" href="#collections">Collections</a>
+              <a class="nav-link text-light" href="gallery.html">Collections</a>
             </li>
             <li class="nav-item pe-2">
               <a class="nav-link text-light" href="#about">About</a>
