--- a/gallery.html
+++ b/gallery.html
@@ -3,33 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Watch Collections Gallery</title>
+  <title>Watch Gallery</title>
   <link rel="stylesheet" href="gallery.css">
 </head>
 <body>
-  <h1>Watch Collections Gallery</h1>
 
-  <!-- Male Collection -->
-  <section id="male-collection">
-    <h2>Male Collection</h2>
-    <div class="image-gallery">
-      <!-- Male watch images go here -->
+<div class="gallery">
+  <!-- Male Watches Section -->
+  <section class="male-watches">
+    <h2>Men's Watches</h2>
+    <div class="watch">
       <img src="male_watch1.jpg" alt="Male Watch 1">
-      <img src="male_watch2.jpg" alt="Male Watch 2">
-      <!-- Add more images as needed -->
+      <div class="details">
+        <h3>Male Watch 1</h3>
+        <p>Price: $200</p>
+      </div>
     </div>
+    <!-- Add more male watches here -->
   </section>
 
-  <!-- Female Collection -->
-  <section id="female-collection">
-    <h2>Female Collection</h2>
-    <div class="image-gallery">
-      <!-- Female watch images go here -->
+  <!-- Female Watches Section -->
+  <section class="female-watches">
+    <h2>Women's Watches</h2>
+    <div class="watch">
       <img src="female_watch1.jpg" alt="Female Watch 1">
-      <img src="female_watch2.jpg" alt="Female Watch 2">
-      <!-- Add more images as needed -->
+      <div class="details">
+        <h3>Female Watch 1</h3>
+        <p>Price: $180</p>
+      </div>
     </div>
+    <!-- Add more female watches here -->
   </section>
+</div>
 
+<script src="gallery.js"></script>
 </body>
 </html>
