--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item pe-2">
-              <a class="nav-link text-light" href="gallery.html">Collections</a>
+              <a class="nav-link text-light" href="#collections">Collections</a>
             </li>
             <li class="nav-item pe-2">
               <a class="nav-link text-light" href="#about">About</a>
@@ -35,7 +35,8 @@
             </li>
             <li class="nav-item pe-2">
               <a class="nav-link text-light" href="#store">
-                <svg viewBox="0 0 20 20" fill="currentColor" width="15" height="15"><path d="M7.5,0.5c-3,0-5.4,2.4-5.4,5.4c0,1.1,0.7,2.6,1.7,4c1.7,2.3,3.7,4.6,3.7,4.6s2-2.4,3.7-4.6  c0.9-1.4,1.7-2.9,1.7-4C12.9,2.9,10.5,0.5,7.5,0.5z M7.5,8.4C6.1,8.4,5,7.2,5,5.9c0-1.4,1.1-2.5,2.5-2.5S10,4.5,10,5.9  S8.9,8.4,7.5,8.4z"></path></svg>                Store Locator
+                <svg viewBox="0 0 15 15" fill="currentColor" width="25" height="25"><path d="M7.5,0.5c-3,0-5.4,2.4-5.4,5.4c0,1.1,0.7,2.6,1.7,4c1.7,2.3,3.7,4.6,3.7,4.6s2-2.4,3.7-4.6  c0.9-1.4,1.7-2.9,1.7-4C12.9,2.9,10.5,0.5,7.5,0.5z M7.5,8.4C6.1,8.4,5,7.2,5,5.9c0-1.4,1.1-2.5,2.5-2.5S10,4.5,10,5.9  S8.9,8.4,7.5,8.4z"></path></svg>
+                Store Locator
               </a>
             </li>
             <li class="nav-item pe-2">
@@ -51,7 +52,7 @@
     <div class="container text-center p-1">
       <h1 class="highlightBox">Discover Timeless Luxury</h1>
       <p class="lead">Explore our exquisite collection of Rolex watches, crafted with precision and elegance.</p>
-      <a href="#collections" class="btn btn-primary btn-lg">View Collections</a>
+      <a href="gallery.html" class="btn btn-primary btn-lg">View Collections</a>
     </div>
   </div>  
 
