--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
   <section class="male-watches">
     <h2>Men's Watches</h2>
     <div class="watch">
-      <img src="male_watch1.jpg" alt="Male Watch 1">
+      <img src="r19.png" alt="Male Watch 1">
       <div class="details">
         <h3>Male Watch 1</h3>
         <p>Price: $200</p>
@@ -26,7 +26,7 @@
   <section class="female-watches">
     <h2>Women's Watches</h2>
     <div class="watch">
-      <img src="female_watch1.jpg" alt="Female Watch 1">
+      <img src="r20.png" alt="Female Watch 1">
       <div class="details">
         <h3>Female Watch 1</h3>
         <p>Price: $180</p>
