--- a/gallery.html
+++ b/gallery.html
@@ -1,41 +1,293 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Watch Gallery</title>
-  <link rel="stylesheet" href="gallery.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Watch Gallery</title>
+    <link rel="stylesheet" href="task3.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body>
-
-<div class="gallery">
-  <!-- Male Watches Section -->
-  <section class="male-watches">
-    <h2>Men's Watches</h2>
-    <div class="watch">
-      <img src="r19.png" alt="Male Watch 1">
-      <div class="details">
-        <h3>Male Watch 1</h3>
-        <p>Price: $200</p>
+  <h2 class="text-center text-light">Our Premium Collection</h2>
+    <div class="gallery">
+      
+      <div class="watch" style="background-image: url('r1.png');">
+        <div class="watch-details">
+          <h3>Watch Name 1</h3>
+          <p>$100</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
       </div>
-    </div>
-    <!-- Add more male watches here -->
-  </section>
-
-  <!-- Female Watches Section -->
-  <section class="female-watches">
-    <h2>Women's Watches</h2>
-    <div class="watch">
-      <img src="r20.png" alt="Female Watch 1">
-      <div class="details">
-        <h3>Female Watch 1</h3>
-        <p>Price: $180</p>
+      <div class="watch" style="background-image: url('r2.png');">
+        <div class="watch-details">
+            <h3>Watch Name 2</h3>
+            <p>$150</p>
+            <button class="like-btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+              </svg>
+            </button>
+        </div>
       </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r4.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r5.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="watch" style="background-image: url('r3.png');">
+        <div class="watch-details">
+          <h3>Watch Name 3</h3>
+          <p>$120</p>
+          <button class="like-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+        <!-- Add more watch images here -->
     </div>
-    <!-- Add more female watches here -->
-  </section>
-</div>
-
-<script src="gallery.js"></script>
+    <script src="task3.js"></script>
 </body>
 </html>
