--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a class="nav-link text-light" href="#about">About</a>
             </li>
             <li class="nav-item pe-2">
-              <a class="nav-link text-light" href="#contact">
+              <a class="nav-link text-light" href="fav.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                   <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
                 </svg> Favourite
