--- a/fav.html
+++ b/fav.html
@@ -7,13 +7,15 @@
   <link rel="stylesheet" href="task3.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body class="bodypart">
+  <h2 class="text-center text-light">Favorite Watches Section</h2>
   <div class="gallery">
+    <div class="watch">
+      <section id="favorites">
+        <div class="favorites"></div>
+      </section>
     </div>
-  <section id="favorites">
-    <h2 class="text-center text-light">Favorite Watches Section</h2>
-    <div class="favorites-container"></div>
-  </section>
+  </div>
   <script src="task3.js"></script>
 </body>
 </html>
