--- a/gallery.html
+++ b/gallery.html
@@ -13,10 +13,10 @@
       <h2 class="text-center text-light">Our Premium Collection</h2>
     </div>
     <div class="col-4 text-center favbutton">
-      <a class="nav-link text-light" href="fav.html">
-        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-heart" viewBox="0 0 18 18">
+      <a class="nav-link text-light pt-3" href="fav.html">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
           <path d="m7.5 14.8-6.2-6.2c-1.7-1.7-1.7-4.5 0-6.2.8-.8 1.9-1.3 3.1-1.3 1.2 0 2.2.5 3.1 1.3v.1c.8-.8 1.9-1.3 3.1-1.3s2.2.5 3.1 1.3c1.7 1.7 1.7 4.5 0 6.2zm-3.1-11.6c-.6 0-1.2.2-1.6.7-.9.9-.9 2.4 0 3.3l4.7 4.8 4.7-4.8c.9-.9.9-2.4 0-3.3-.8-.9-2.4-.9-3.2 0l-1.5 1.5-1.5-1.5c-.4-.5-1-.7-1.6-.7z"></path>
-        </svg><span class="favsize">Favourites</span>
+        </svg> Favourite
       </a>
     </div>
   </div>
