--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body class="bodypart">
-  <div class="row">
+  <div class="row premium">
     <div class="col-8">
       <h2 class="text-center text-light">Our Premium Collection</h2>
     </div>
