--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
             </div>
           </div>
         </div>
+        <!-- Collection 2: Datejust -->
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <img src="r7.png" class="card-img-top" alt="Rolex Datejust">
+            <div class="card-body">
+              <h4 class="card-title text-center text-dark">Datejust</h4>
+              <p class="card-text text-center text-dark">A classic symbol of style and prestige, featuring the iconic date window.</p>
+              <a href="#" class="btn btn-primary d-block mx-auto">Explore</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
